--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,9 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'log4j', name: 'log4j', version: '1.2.17'
+    compile group: 'org.springframework', name: 'spring-core', version: '5.2.1.RELEASE'
+    compile group: 'org.springframework', name: 'spring-beans', version: '5.2.1.RELEASE'
+    compile group: 'org.springframework', name: 'spring-context', version: '5.2.1.RELEASE'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
 }
